--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,7 +5,7 @@ phases:
     commands:
       - apt-get update
       - apt-get install -y python-setuptools python-pip python-dev build-essential 
-      - pip3 install awscli
+      - pip install awscli
   pre_build:
     commands:
       - echo Setting up for a build.
